--- a/index.html
+++ b/index.html
@@ -3,54 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nutriholic Diet - Fasting Guide</title>
+    <title>Fasting Guide</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #333;
-        }
-        header {
-            background-color: #4caf50;
-            color: white;
+            margin: 20px;
             padding: 20px;
-            text-align: center;
+            background-color: #f5f5f5;
         }
-        main {
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: white;
             padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+        h1, h2 {
+            color: #2c3e50;
         }
-        a {
-            color: #4caf50;
-            text-decoration: none;
+        ul {
+            padding-left: 20px;
         }
-        a:hover {
-            text-decoration: underline;
+        .footer {
+            margin-top: 20px;
+            font-style: italic;
+            color: #7f8c8d;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Welcome to Nutriholic Diet</h1>
-        <p>Let food be the medicine.</p>
-    </header>
-    <main>
-        <h2>Fasting Guide</h2>
-        <p>This is your guide to fasting. Learn how to make fasting effective, healthy, and tailored to your needs.</p>
-        <p>For more information, visit our <a href="https://nutriholicdiet.com" target="_blank">official website</a>.</p>
-    </main>
-    <footer>
-        <p>© 2025 Nutriholic Diet. All rights reserved.</p>
-    </footer>
+    <div class="container">
+        <h1>Fasting Diet Guide</h1>
+        
+        <h2>1. Replacement of Grains</h2>
+        <ul>
+            <li>Millets: Foxtail, Kodo, Proso, Barnyard, Little Millet, Pearl Millet, Browntop Millet.</li>
+            <li>Seeds: Amaranth, Quinoa, Pumpkin, Sesame, Flax, Sunflower.</li>
+        </ul>
+
+        <h2>2. Hydration</h2>
+        <ul>
+            <li>Drink plenty of water throughout the day.</li>
+            <li>Include coconut water, vegetable juice, electrolyte water, and herbal teas.</li>
+        </ul>
+
+        <h2>3. Meal Guide</h2>
+        <ul>
+            <li>Include vegetables (raw, cooked, or boiled).</li>
+            <li>Include a source of protein like curd, paneer, or tofu.</li>
+            <li>Replace grains with millets or seeds.</li>
+            <li>Avoid fried foods and beverages with meals.</li>
+            <li>Use Sendha Namak (rock salt) instead of white salt.</li>
+        </ul>
+
+        <h2>4. Diet for the Rest of the Day</h2>
+        <ul>
+            <li>Include seasonal fruits and nuts as snacks.</li>
+            <li>Drink green tea, black coffee, or red tea in moderation.</li>
+            <li>Include chenna or curd in your diet.</li>
+            <li>Avoid eating fruits after 6 PM.</li>
+        </ul>
+
+        <h2>5. Workout Guide</h2>
+        <ul>
+            <li>Avoid heavy exercises like weight lifting, long runs, trekking, and cycling.</li>
+            <li>Practice yoga and pranayama.</li>
+            <li>Stay active with household chores, walking, and light activities.</li>
+        </ul>
+
+        <div class="footer">
+            <p>"Fasting is for giving your mind, soul, and body a rest, especially your digestive tract. Eat in moderation and keep your meals light and healthy. It's the best way to detox your body without staying hungry."</p>
+            <p><strong>Thank you!</strong></p>
+        </div>
+    </div>
 </body>
 </html>
